fix: Resolve Solr host configuration for Maven/Jetty environment
CRITICAL FIX: PropertyManager now properly supports system property overrides for Jetty environment configuration.

**Problem Solved:**
- Solr host was stuck on "solr" (Docker service name) instead of "localhost" in Maven/Jetty environment
- PropertyManager.readValue() was not checking system properties before delegating to Spring PropertyPlaceholderConfigurer
- Result: UnknownHostException: solr during Solr indexing operations

**Solution Applied:**
- Modified PropertyManager.readValue() to check System.getProperty() as first priority
- Added explicit system property support for environment-specific overrides
- Enables -Dsolr.host=localhost system property to properly override configuration

**Environment Separation:**
- Created nemakiware-docker.properties for Docker/Tomcat environment (host=solr)
- Enhanced propertyContext.xml to load environment-specific configurations
- Maven/Jetty: Uses system properties (-Dsolr.host=localhost)
- Docker/Tomcat: Uses nemakiware-docker.properties (host=solr)

**Verification:**
- ✅ CMIS AtomPub endpoints: HTTP 200
- ✅ Solr requests now go to http://localhost:8983/solr/nemaki
- ✅ No more UnknownHostException: solr errors
- ✅ Clean Maven/Jetty startup from scratch works correctly

**Files Modified:**
- PropertyManager.java: Added system property priority support
- propertyContext.xml: Enhanced environment-specific property loading
- nemakiware-docker.properties: NEW - Docker environment configuration

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

Former-commit-id: 01c0cb7abe2efcc354014d436c6a67674ad0472d